[fix] Improve overflow management
Prevents the scrollbar to be displayed on the global application because
of the OnboardArea.

--- a/frontend/src/onboarding/OnboardArea.module.css
+++ b/frontend/src/onboarding/OnboardArea.module.css
@@ -12,6 +12,7 @@
  *******************************************************************************/
 .onboardArea {
   padding-top: 48px;
+  overflow-y: auto;
 }
 
 .onboardContent {
